welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ')' expected but integer literal found.
  if (temp1 < 0 && temp 2 > 100 || temp1 > 100 && temp2 < 0) {
                        ^icyHot:5: error: illegal start of simple expression
} 
^